tests/typing/errors/mcil/undefined-subsystem.mcil
(set-logic ALL)
(define-system sys :subsys (a (b Int)))